# CodePilot

./: .codepilot.yml.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  PRD.md  PROJECT_STATUS.md  README.md  hello_codepilot.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.trae/documents/: fix-streaming-and-conversation-log.md  sandbox-verify-and-push.md
codepilot/: config.py  main.py
codepilot/agent/: loop.py
codepilot/context/: compressor.py  manager.py  token_counter.py
codepilot/providers/: anthropic.py  base.py  deepseek.py
codepilot/security/: approval.py  command_filter.py  sandbox.py
codepilot/tools/: __init__.py  file_edit.py  file_read.py  file_write.py  list_files.py  registry.py  search_code.py  shell_exec.py
codepilot/ui/: banner.py  diff_view.py  display.py
flask_demo/: app.py
flask_demo/templates/: index.html
portfolio_site/: about.html  index.html  projects.html  styles.css
src/codepilot/: __init__.py  __main__.py  app.py  cli.py  config.py  exceptions.py
test_website/: index.html
tests/: __init__.py  conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_agent_loop.py  test_git_integration.py  test_multi_turn_scenarios.py  test_tool_execution.py
tests/unit/: test_agent_loop.py  test_app.py  test_cli.py  test_config.py  test_context.py  test_cost_tracker.py  test_diagnose.py  test_git.py  test_hooks.py  test_mcp.py  test_memory.py  test_plan_tool.py  test_project_instructions.py  test_providers.py  test_repomap.py  test_security.py  test_session.py  test_shell_exec.py  test_ui.py  (+2 more)
(+61 files in other folders)
