[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codepilot-cli"
version = "0.2.0"
description = "终端 AI 编码智能体 CLI"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "anthropic>=0.40.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "build>=1.0",
]

[project.scripts]
codepilot = "codepilot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codepilot"]

[tool.mypy]
strict = true
packages = ["src/codepilot"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: 端到端测试",
]
